--- a/PuppyApp/main.html
+++ b/PuppyApp/main.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en" class="fuelux">
 <head>
     <title>Main</title>
     <meta charset="utf-8">
@@ -18,7 +18,8 @@
     <link href='https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.css' rel='stylesheet' />
     <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/MarkerCluster.css' rel='stylesheet' />
     <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/MarkerCluster.Default.css' rel='stylesheet' />
-    <link href="//www.fuelcdn.com/fuelux/3.15.0/css/fuelux.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/fuelux/3.15.0/css/fuelux.css" rel="stylesheet">
+
     <!-- Custom Fonts -->
     <link href="fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -581,6 +582,7 @@
                                 <div class="form-group">
                                     <label class="col-lg-2 control-label" for="eventWhen">Location</label>
                                     <div class="col-lg-9">
+                                        <small>Drag and drop the red baloon into the right spot in the map</small>
                                         <div id="eventMapInput" style="height:350px">
                                             <!--Maps Goes Here-->
                                         </div>
@@ -666,35 +668,38 @@
                 <div class="modal-body">
                     <h1 class="text-left">Person Detail</h1>
                     <hr />
-                    <div id="eventForm" class="form-horizontal">
+                    <form id="ownerForm" role="form" class="form-horizontal" data-toggle="validator">
                         <div class="form-group">
                             <label class="col-xs-3 control-label" for="firstNameInput">First Name</label>
                             <div class="col-xs-9">
-                                <input type="text" class="form-control" id="firstNameInput">
+                                <input type="text" class="form-control" id="firstNameInput" data-minlength="3" placeholder="Juan" required>
                             </div>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group ">
                             <label class="col-xs-3 control-label" for="lastNameInput">Last Name</label>
                             <div class="col-xs-9">
-                                <input type="text" class="form-control" id="lastNameInput">
+                                <input type="text" class="form-control" id="lastNameInput" data-minlength="3" placeholder="Perez" required>
+                                
                             </div>
+                            
                         </div>
                         <div class="form-group">
                             <label class="col-xs-3 control-label" for="uniqueInput">Unique ID</label>
                             <div class="col-xs-9">
-                                <input type="text" class="form-control" id="uniqueInput" placeholder="ID from issue country">
+                                <input type="number" class="form-control" id="uniqueInput" placeholder="ID from issue country" required>
+                                <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
                             </div>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group has-feedback">
                             <label class="col-xs-3 control-label" for="petNameInput">Pet Name</label>
                             <div class="col-xs-9">
                                 <input type="text" class="form-control" id="petNameInput">
                             </div>
                         </div>
-                    </div>
+                    </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" data-dismiss="modal">Add</button>
+                    <button type="submit" class="btn btn-primary">Add</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 </div>
             </div>
@@ -761,16 +766,17 @@
             </div>
         </div>
     </div>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins), or include individual files as needed -->
     <script src="Scripts/jquery-1.10.2.min.js"></script>
     <script src="Scripts/bootstrap.js"></script>
     <script src="Scripts/knockout-3.4.0.debug.js"></script>
     <script src="Scripts/moment.js"></script>
-    <script src="//www.fuelcdn.com/fuelux/3.15.0/js/fuelux.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <!-- Include all third party compiled plugins (below) -->
     <script src='https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.js'></script>
     <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/leaflet.markercluster.js'></script>
-    <!-- Custom JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fuelux/3.15.0/js/fuelux.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/1000hz-bootstrap-validator/0.10.2/validator.js"></script>
+    <!-- Custom JavaScript (below) -->
     <script src="Scripts/scrollTo.js"></script>
     <script src="Scripts/app.js"></script>
     <script src="Scripts/dashboard.js"></script>
@@ -918,10 +924,12 @@
 
             showActivityMap();
             // another initialization
-            var d1 = moment().subtract(10,'years').format('MM/DD/YYYY');
-            //var d2 =  new Date(now.getFullYear() + 5, 12, 31);
+            var now = new Date();
+            var d1 = moment().subtract(15, 'years').format('MM/DD/YYYY');
+            var d2 = moment().add(15, 'years').format('MM/DD/YYYY');
             $('#eventWhenDatepicker').datepicker({
-                retricted: [{ from: '01/01/1996', to: '12/31/2026' }]
+                allowPastDates: true,
+                restricted: [{ from: -Infinity, to: d1 }, { from: d2, to: Infinity }]
             });
 
             $('#saveEventButton').click(function (ev) {
