--- a/PuppyApp/main.html
+++ b/PuppyApp/main.html
@@ -15,18 +15,18 @@
     <!-- Morris Charts CSS -->
     <link href="Content/morris.css" rel="stylesheet">
     <!-- Map Library Styles -->
-    <link href='https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.css' rel='stylesheet' />
-    <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/MarkerCluster.css' rel='stylesheet' />
-    <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/MarkerCluster.Default.css' rel='stylesheet' />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/fuelux/3.15.0/css/fuelux.css" rel="stylesheet">
+    <link href='//api.mapbox.com/mapbox.js/v2.4.0/mapbox.css' rel='stylesheet' />
+    <link href='//api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/MarkerCluster.css' rel='stylesheet' />
+    <link href='//api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/MarkerCluster.Default.css' rel='stylesheet' />
+    <link href="//cdnjs.cloudflare.com/ajax/libs/fuelux/3.15.0/css/fuelux.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.2/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+      <script src="//oss.maxcdn.com/libs/html5shiv/3.7.2/html5shiv.js"></script>
+      <script src="//oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
     <style>
         .media-body span {
@@ -514,10 +514,10 @@
                                             
                                         </div>
                                         <div class="input-group-btn">
-                                                <button type="button" class="btn btn-default" data-toggle="modal" data-target="#ownerModal">
-                                                    <span class="glyphicon glyphicon-plus"></span>
-                                                </button>
-                                            </div>
+                                            <button type="button" class="btn btn-default" data-toggle="modal" data-target="#ownerModal">
+                                                <span class="glyphicon glyphicon-plus"></span>
+                                            </button>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -602,7 +602,7 @@
                             <div class="panel panel-default">
                                 <div id="exploreMap" style="min-height:450px; margin:10px" class="panel-body">
                                     <!--Maps Goes Here-->
-                                    <!--<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3670785.033068472!2d-60.895492749999995!3d-26.0417017!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sar!4v1460598569334" width="1200" height="1024" frameborder="0" style="border:0"></iframe>-->
+                                    <!--<iframe src="//www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3670785.033068472!2d-60.895492749999995!3d-26.0417017!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sar!4v1460598569334" width="1200" height="1024" frameborder="0" style="border:0"></iframe>-->
                                 </div>
                             </div>
                         </div>
@@ -757,10 +757,10 @@
     <script src="Scripts/knockout-3.4.0.debug.js"></script>
     <script src="Scripts/moment.js"></script>
     <!-- Include all third party compiled plugins (below) -->
-    <script src='https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.js'></script>
-    <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/leaflet.markercluster.js'></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fuelux/3.15.0/js/fuelux.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/1000hz-bootstrap-validator/0.10.2/validator.js"></script>
+    <script src='//api.mapbox.com/mapbox.js/v2.4.0/mapbox.js'></script>
+    <script src='//api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/leaflet.markercluster.js'></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/fuelux/3.15.0/js/fuelux.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/1000hz-bootstrap-validator/0.10.2/validator.js"></script>
     <!-- Custom JavaScript (below) -->
     <script src="Scripts/scrollTo.js"></script>
     <script src="Scripts/app.js"></script>
@@ -819,7 +819,10 @@
         function showExploreMap() {
 
             var map = L.mapbox.map('exploreMap', 'mapbox.streets', { tileLayer: { format: 'jpg70' }, zindex: 1 })
-                            .setView([-27.36616489612778, -55.89320182800293], 13);
+                            .setView([-27.36616489612778, -55.89320182800293], 13)
+                            .addControl(L.mapbox.geocoderControl('mapbox.places', {
+                                autocomplete: true
+                            }));
 
             var markers = getMarkers();
 
@@ -829,7 +832,10 @@
 
         function showActivityMap(center) {
             var map = L.mapbox.map('activityMap', 'mapbox.streets', { tileLayer: { format: 'jpg70' } })
-                .setView([-27.36616489612778, -55.89320182800293], 15);
+                .setView(center, 15)
+                .addControl(L.mapbox.geocoderControl('mapbox.places', {
+                    autocomplete: true
+                }));
 
             dashVM.recentHistoryEvents.subscribe(function (newPoints) {
                 // convert newvalue to markers
@@ -907,7 +913,12 @@
             // set my access token in order to show maps
             L.mapbox.accessToken = 'pk.eyJ1IjoicGFjaGlmbHllciIsImEiOiJjaW4zdmwydWswYnphdjdrazRwcWY5enU1In0.U5Z6syz8o-TcXv2uR6Qqug';
 
-            showActivityMap();
+            // display near activity in map
+            getLocation(function (position) {
+                var point = [position.coords.latitude, position.coords.longitude];
+                showActivityMap(point);
+            });
+            
             // another initialization
             var now = new Date();
             var d1 = moment().subtract(15, 'years').format('MM/DD/YYYY');
